Build usable multi-user monitoring console
